Fix alignment

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
   max-width: 1200px;
   margin: auto;
-  padding: 1em;
+  padding: 1em 2em;
 }
