--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   max-width: 1200px;
   margin: auto;
-  padding: 1em;
+  padding: 1em 2em;
   display: flex;
   align-items: center;
   justify-content: space-between;
