--- a/src/styles/LinksSection.module.css
+++ b/src/styles/LinksSection.module.css
@@ -5,7 +5,6 @@
 }
 
 .linksSection {
-  margin: 1em 0;
   padding-top: 2em;
   padding-bottom: 1em;
   background-color: var(--gray-lighter);
